--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,7 +7,10 @@ services:
     restart: always
     container_name: ctr_app_dev
     ports:
-      - "8081:8081"
+      - "8081:8081"   #Interfas Web
+      - "19000:19000" #Metro Bundler
+      - "19001:19001" #WebSocket
+      - "19002:19002" #Expo Dev Tools
     environment:
       - TZ=America/Mexico_City
     volumes:
